src/test/deca/codegen/invalid/created/dereferencement_null2.deca
// Description :
//		test utilisation null
//
// Resultats :
//		Erreur de compilateur : déréferencement de null

class B{
int met;
}

{
B b = null;
b.met;
}